Fix viewport overflow width bug

--- a/stylesheets/elements.css
+++ b/stylesheets/elements.css
@@ -34,6 +34,7 @@ header {
   width: 100%;
   text-align: center;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 /* NAVIGATION BAR */
